2001-04-21  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/ntp-genkeys.c: Declare check_netinfo, don't define it.
	From: Jack Bryans <jbryans@csulb.edu>

	* configure.in (RSASRCS): rsaref2 needs digit.h (I thought I fixed
	this already).
	
	* configure.in (CFLAGS): Disable -Wconversion, enable
	-Wmissing-prototypes, and allow for -Werror.
	From: Simon Burge <simonb@wasabisystems.com>

	* util/ntp-genkeys.c (main): Reset the standard mask so the
	symlinks are created with the standard mask.

	* configure.in: 4.0.99k28

	* ntpd/ntpd.c (ntpdmain): Use mode_t for umask value.

	* util/ntp-genkeys.c: Create files with the right umask.

	* util/ntp-genkeys.c: config_file should be declared, not defined.
	* ntpd/refclock_mx4200.c (mx4200_pps): debug cleanup.
	* ntpd/refclock_hopfser.c: If we're not using it, provide the _bs.
	* ntpd/refclock_heath.c (heath_receive): Add missing "break"
	statements.
	* ntpd/ntp_proto.c: Lose extra definition of mode_ntpdate.
	* librsaref/Makefile.am (nodist_librsaref_a_SOURCES): Put RSASRCS
	on the same line as rsaref.h to improve portability.
	* libntp/msyslog.c: Lint cleanup.
	From: Marc.Brett@westerngeco.com

	* util/ntp-genkeys.c:
	* ntpdate/ntpdate.c:
	* ntpd/ntp_config.c: Netinfo header reorder.
	From: Jack Bryans <jbryans@csulb.edu>

	* configure.in: timespec can be found by looking in goofy places
	under SunOS.

2001-04-20  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_nmea.c:  PPSAPI cleanup, default to RMC sentences,
	handle milliseconds, multiple sentences, other good stuff.
	From: John Woolner <vk1et@tpg.com.au>, Marc.Brett@westerngeco.com,
	John.Hay@icomtek.csir.co.za

	* ntpd/ntp_proto.c (receive): In the AM_NEWBCL case, return in all
	cases at the end.
	* ntpd/ntp_peer.c (newpeer): Check cast_flags against MDF_BCLNT,
	not against MDF_BCAST.
	* ntpd/ntp_loopfilter.c (local_clock): Lose debug info.
	* ntpd/ntp_crypto.c (crypto_recv): Bugfix.
	From: Dave Mills.

	* configure.in: 4.0.99k27
